@@ -73,8 +73,7 @@ During decoding, the following options are supported:
 .TP
 \fB\-strict\fR
 .
-Instructs the decoder to throw an error if it encounters any characters that
-are not strictly part of the encoding itself. Otherwise it ignores them.
+Instructs the decoder to throw an error if it encounters whitespace characters. Otherwise it ignores them.
 .RE
 .TP
 \fBhex\fR
@@ -88,8 +87,7 @@ options are supported:
 .TP
 \fB\-strict\fR
 .
-Instructs the decoder to throw an error if it encounters any characters that
-are not strictly part of the encoding itself. Otherwise it ignores them.
+Instructs the decoder to throw an error if it encounters whitespace characters. Otherwise it ignores them.
 .RE
 .TP
 \fBuuencode\fR
@@ -118,8 +116,7 @@ During decoding, the following options are supported:
 .TP
 \fB\-strict\fR
 .
-Instructs the decoder to throw an error if it encounters any characters that
-are not strictly part of the encoding itself. Otherwise it ignores them.
+Instructs the decoder to throw an error if it encounters whitespace characters. Otherwise it ignores them.
 .RE
 .VE 8.6
 .SH "BINARY FORMAT"
